add chatcompletion functionality

--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.1",
     "mysql2": "^3.15.2",
     "npm": "^11.6.2",
+    "openai": "^6.8.1",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
