--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "npm": "^11.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
     "tailwindcss": "^4.1.14",
     "three": "^0.182.0",
