--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-phone-number-input": "^3.4.16",
     "react-router-dom": "^7.9.3",
     "tailwindcss": "^4.1.14",
     "three": "^0.182.0",
