--- a/.env
+++ b/.env
@@ -1,8 +1,15 @@
 VITE_PF_MERCHANT_ID=25704885
 VITE_PF_MERCHANT_KEY=9dantz7qg7jan
 
+VITE_PF_SANDBOX_MERCHANT_ID=10035686
+VITE_PF_SANDBOX_MERCHANT_KEY=zwwkve6q5uuma
+
 VITE_FRONTEND_URL=http://loaclhost:5173
 VITE_BACKEND_URL=http://localhost:5000
 VITE_RETURN_URL=/success
 VITE_CANCEL_URL=/cancel
 VITE_NOTIFY_URL=/notify
+
+VITE_LIVE_URL: "https://www.payfast.co.za/eng/process"
+VITE_SANDBOX_URL: "https://sandbox.payfast.co.za/eng/process"
+	https://sandbox.payfast.co.za/eng/process
